@@ -7,6 +7,9 @@ To do :
 
 Log:
 
+- 08/08/2006, version 0.2.5: roms
+	- added TIG_BACKUP flag (needed to avoid clearing of RAM)
+
 - 18/07/2006, version 0.2.4: roms
 	- added ticalcs_probe for Kevin and I. This function is complete because it handles 
 		all of the probing (open/close handle, probe for all/FLASH only devices).
